--- a/resources/403.html
+++ b/resources/403.html
@@ -5,7 +5,7 @@
 
      <meta charset="UTF-8">
 
-     <title>JehanRio-首页</title>
+     <title>Home</title>
      <link rel="icon" href="images/favicon.ico">
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/animate.css">
@@ -38,15 +38,15 @@
                          <span class="icon icon-bar"></span>
                     </button>
                     <!-- lOGO TEXT HERE -->
-                    <a href="/" class="navbar-brand">JehanRio</a>
+                    <a href="/" class="navbar-brand">Nan</a>
                </div>
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                         <li><a class="smoothScroll" href="/">首页</a></li>
-                         <li><a class="smoothScroll" href="/picture">图片</a></li>
-                         <li><a class="smoothScroll" href="/video">视频</a></li>
-                         <li><a class="smoothScroll" href="/login">登录</a></li>
-                         <li><a class="smoothScroll" href="/register">注册</a></li>
+                         <li><a class="smoothScroll" href="/">Home</a></li>
+                         <li><a class="smoothScroll" href="/picture">Picture</a></li>
+                         <li><a class="smoothScroll" href="/video">Video</a></li>
+                         <li><a class="smoothScroll" href="/login">Login</a></li>
+                         <li><a class="smoothScroll" href="/register">Register</a></li>
                     </ul>
                </div>
 
@@ -62,7 +62,7 @@
                               data-wow-delay="0.2s" alt="about image">
                     </div>
                     <div class="col-md-8 col-sm-8">
-                         <h1 class="wow fadeInUp" data-wow-delay="0.6s">403 禁止访问</h1>                    
+                         <h1 class="wow fadeInUp" data-wow-delay="0.6s">403 Forbidden</h1>                    
                     </div>
                </div>
           </div>
