--- a/resources/picture.html
+++ b/resources/picture.html
@@ -5,7 +5,7 @@
 
      <meta charset="UTF-8">
 
-     <title>JehanRio-图片</title>
+     <title>Picture</title>
      <link rel="icon" href="images/favicon.ico">
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/animate.css">
@@ -37,16 +37,16 @@
                          <span class="icon icon-bar"></span>
                     </button>
                     <!-- lOGO TEXT HERE -->
-                    <a href="/" class="navbar-brand">JehanRio</a>
+                    <a href="/" class="navbar-brand">Nan</a>
                </div>
 
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                         <li><a class="smoothScroll" href="/">首页</a></li>
-                         <li><a class="smoothScroll" href="/picture">图片</a></li>
-                         <li><a class="smoothScroll" href="/video">视频</a></li>
-                         <li><a class="smoothScroll" href="/login">登录</a></li>
-                         <li><a class="smoothScroll" href="/register">注册</a></li>
+                         <li><a class="smoothScroll" href="/">Home</a></li>
+                         <li><a class="smoothScroll" href="/picture">Picture</a></li>
+                         <li><a class="smoothScroll" href="/video">Video</a></li>
+                         <li><a class="smoothScroll" href="/login">Login</a></li>
+                         <li><a class="smoothScroll" href="/register">Register</a></li>
                     </ul>
                </div>
           </div>
@@ -63,7 +63,7 @@
                     </div>
 
                     <div class="col-md-8 col-sm-8">
-                         <h1 class="wow fadeInUp" data-wow-delay="0.6s">图片测试</h1>
+                         <h1 class="wow fadeInUp" data-wow-delay="0.6s">Testing Picture</h1>
                     </div>
 
                </div>
