--- a/resources/register.html
+++ b/resources/register.html
@@ -3,7 +3,7 @@
 
 <head>
      <meta charset="UTF-8">
-     <title>JehanRio-注册</title>
+     <title>Register</title>
      <link rel="icon" href="images/favicon.ico">
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/animate.css">
@@ -34,15 +34,15 @@
                          <span class="icon icon-bar"></span>
                     </button>
                     <!-- lOGO TEXT HERE -->
-                    <a href="/" class="navbar-brand">JehanRio</a>
+                    <a href="/" class="navbar-brand">Nan</a>
                </div>
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                         <li><a class="smoothScroll" href="/">首页</a></li>
-                         <li><a class="smoothScroll" href="/picture">图片</a></li>
-                         <li><a class="smoothScroll" href="/video">视频</a></li>
-                         <li><a class="smoothScroll" href="/login">登录</a></li>
-                         <li><a class="smoothScroll" href="/register">注册</a></li>
+                         <li><a class="smoothScroll" href="/">Home</a></li>
+                         <li><a class="smoothScroll" href="/picture">Picture</a></li>
+                         <li><a class="smoothScroll" href="/video">Video</a></li>
+                         <li><a class="smoothScroll" href="/login">Login</a></li>
+                         <li><a class="smoothScroll" href="/register">Register</a></li>
                     </ul>
                </div>
 
@@ -53,13 +53,13 @@
           <div class="container">
                <div class="row">
                     <div align="center">
-                         <h1 class="wow fadeInUp" data-wow-delay="0.6s">注册</h1>
+                         <h1 class="wow fadeInUp" data-wow-delay="0.6s">Register</h1>
                          <form action="register" method="post">
-                              <div align="center"><input type="text" name="username" placeholder="用户名"
+                              <div align="center"><input type="text" name="username" placeholder="username"
                                         required="required"></div><br />
-                              <div align="center"><input type="password" name="password" placeholder="用户密码"
+                              <div align="center"><input type="password" name="password" placeholder="password"
                                         required="required"></div><br />
-                              <div align="center"><button type="submit">确认</button></div>
+                              <div align="center"><button type="submit">Submit</button></div>
                          </form>
                     </div>
                </div>
