--- a/resources/welcome.html
+++ b/resources/welcome.html
@@ -3,7 +3,7 @@
 
 <head>
      <meta charset="UTF-8">
-     <title>JehanRio-欢迎</title>
+     <title>Welcome</title>
      <link rel="icon" href="images/favicon.ico">
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/animate.css">
@@ -34,16 +34,16 @@
                          <span class="icon icon-bar"></span>
                     </button>
                     <!-- lOGO TEXT HERE -->
-                    <a href="/" class="navbar-brand">JehanRio</a>
+                    <a href="/" class="navbar-brand">Nan</a>
                </div>
 
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                         <li><a class="smoothScroll" href="/">首页</a></li>
-                         <li><a class="smoothScroll" href="/picture">图片</a></li>
-                         <li><a class="smoothScroll" href="/video">视频</a></li>
-                         <li><a class="smoothScroll" href="/login">登录</a></li>
-                         <li><a class="smoothScroll" href="/register">注册</a></li>
+                         <li><a class="smoothScroll" href="/">Home</a></li>
+                         <li><a class="smoothScroll" href="/picture">Picture</a></li>
+                         <li><a class="smoothScroll" href="/video">Video</a></li>
+                         <li><a class="smoothScroll" href="/login">Login</a></li>
+                         <li><a class="smoothScroll" href="/register">Register</a></li>
                     </ul>
                </div>
 
@@ -61,8 +61,7 @@
                     </div>
 
                     <div class="col-md-8 col-sm-8">
-                         <h1 class="wow fadeInUp" data-wow-delay="0.6s"> 欢迎您！</h1>
-                         <!-- <a href="#" class="wow fadeInUp btn btn-default section-btn" data-wow-delay="1s">下载简历</a> -->
+                         <h1 class="wow fadeInUp" data-wow-delay="0.6s">Welcome !</h1>
                     </div>
 
                </div>
